...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                                <items>
                                    <navigationItem title="Settings" id="NGS-Cw-PB2">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="uUl-Zz-agU" userLabel="Cancel">
                                            <connections>
                                                <segue destination="16a-KS-iYz" kind="show" identifier="settingsToRootCancel" id="KdF-nH-5JM"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Save" id="QBU-Er-qKc">
                                            <connections>
                                                <segue destination="16a-KS-iYz" kind="show" identifier="settingsToRootSave" id="T55-ux-bNy"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <slider opaque="NO" contentMode="scaleToFill" restorationIdentifier="highTempSlider" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZWo-QK-YdQ" userLabel="HighTemp Slider">
                                                <rect key="frame" x="14" y="89" width="283" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="HighTemp Slider"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <slider opaque="NO" contentMode="scaleToFill" restorationIdentifier="lowTempSlider" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="RkT-dk-S0M" userLabel="LowTemp Slider">
                                                <rect key="frame" x="14" y="192" width="283" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="LowTemp Slider"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zw4-Rh-hBB" userLabel="Rain Picker">
                                                <rect key="frame" x="35.5" y="69" width="60" height="80"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Rain Picker"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rW7-ji-G7z" userLabel="Snow Picker">
                                                <rect key="frame" x="193.5" y="69" width="60" height="80"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Snow Picker"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <slider opaque="NO" contentMode="scaleToFill" restorationIdentifier="precipitationSlider" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="WDj-Ye-nXf" userLabel="Precipitation Slider">
                                                <rect key="frame" x="14" y="238" width="283" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Precipitation Slider"/>
...
                                                <rect key="frame" x="87" y="32" width="137" height="32"/>
                                                <segments>
                                                    <segment title="Imperial"/>
                                                    <segment title="Metric"/>
                                                </segments>
                                                <connections>
...
                                                <rect key="frame" x="87" y="79" width="137" height="32"/>
                                                <segments>
                                                    <segment title="ºF"/>
                                                    <segment title="ºC"/>
                                                </segments>
                                                <connections>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" restorationIdentifier="gpsSwitch" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k2f-u2-krS" userLabel="GPS Switch">
                                                <rect key="frame" x="230" y="32" width="51" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="GPS Switch"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ah6-wI-Jf0" userLabel="Zipcode Text Field">
                                                <rect key="frame" x="115.5" y="72.5" width="80" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Zipcode Text Field"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" restorationIdentifier="zipcodeSwitch" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g37-sO-THn" userLabel="Zipcode Switch">
                                                <rect key="frame" x="230" y="74" width="51" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Zipcode Switch"/>
...
